# minilottery

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: entry.h  import.h  list_operators.h  log.h  lottery.h  main.h  os.h  person.h
src/: entry.c  import.c  list_operators.c  log.c  lottery.c  main.c  os.c  person.c
